// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should provide defaults 1`] = `
<button
  class="button"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="inner centered"
  >
    <span>
      Button Inner
    </span>
  </span>
</button>
`;

exports[`Button props should have a property for backgroundColor 1`] = `
<button
  class="button"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="inner centered"
  >
    <span>
      Button Inner
    </span>
  </span>
</button>
`;

exports[`Button props should have a property for borderColor 1`] = `
<button
  class="button"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #fff;"
>
  <span
    class="inner centered"
  >
    <span>
      Button Inner
    </span>
  </span>
</button>
`;

exports[`Button props should have a property for disabled 1`] = `
<button
  class="button disabled"
  disabled="disabled"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="inner centered"
  >
    <span>
      Button Inner
    </span>
  </span>
</button>
`;

exports[`Button props should have a property for href 1`] = `
<a
  class="button"
  href="http://foo.bar"
  style="color: rgb(43, 138, 198); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="inner centered"
  >
    <span>
      Button Inner
    </span>
  </span>
</a>
`;

exports[`Button props should have a property for textColor 1`] = `
<button
  class="button"
  style="color: rgb(255, 255, 255); background: rgb(255, 255, 255); border-color: #2b8ac6;"
>
  <span
    class="inner centered"
  >
    <span>
      Button Inner
    </span>
  </span>
</button>
`;
